Fix: dont let arrow in quote overflow

--- a/fractal/components/03_organisms/statement/statement.scss
+++ b/fractal/components/03_organisms/statement/statement.scss
@@ -15,6 +15,7 @@
 		left: 320px;
 		height: 175%;
 		opacity: 0.5;
+		overflow: hidden;
 	}
 
 	&__quote {
